# FeedPilot

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AI配置说明.md  CHANGELOG.md  CLAUDE.md  DOCKER-CHECKLIST.md  DOCKER.md  Dockerfile  Dockerfile.cn  Dockerfile.mirror  FINAL_SUMMARY.md  JSON格式说明.md  QUICKREF.md  README.md  SUMMARY.md  UBUNTU-DEPLOY.md  USAGE.md  debug_rss.py  deploy.sh  docker-compose.example.yml  docker-compose.mirror.yml  docker-compose.yml  example_ai_response.json  example_output.md  install_ai.bat  install_ai.sh  main.py  pyproject.toml  requirements.txt  test_enhancer.py  test_json_format.py  内容增强使用指南.md  系统提示词.md  阶段1提示词.md  阶段2提示词.md
.claude/: settings.local.json
.github/workflows/: dockerhub-ci.yml
.spec-workflow/: session.json
config/: app.yaml
docs/: DOCKER-RATELIMIT.md  NO-DOCKER-DEPLOY.md  RATELIMIT-QUICKFIX.md  WHY-DOCKER-PULL.md
prompts/: scoring_prompt.txt
scripts/: build-retry.sh  deploy-docker-mirror.sh  deploy-python.sh  docker-login.sh  quickfix-deploy.sh  setup-docker-mirror.sh  setup-systemd.sh
src/: cli.py  service.py
src/ai/: __init__.py  content_enhancer.py  scorer.py
src/config/: __init__.py  loader.py
src/db/: __init__.py  storage.py
src/models/: __init__.py  rss_item.py
src/pushers/: __init__.py  base.py  pushplus.py
src/rss/: __init__.py  fetcher.py  parser.py
src/utils/: __init__.py  content_fetcher.py  logger.py
tests/: conftest.py  test_content_enhancer.py
