[project]
name = "feedpilot"
version = "1.0.0"
description = "智能RSS推送服务 - 支持AI聚合总结"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "python-dateutil>=2.8.2",
    "beautifulsoup4>=4.12.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
claude = ["anthropic>=0.18.0"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
